<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_1"
        android:title="@string/action_1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_2"
        android:icon="@drawable/ic_directions_run_black"
        android:title="@string/action_2"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_3"
        android:icon="@drawable/ic_directions_run_black"
        android:title="@string/action_3"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_4"
        android:icon="@drawable/ic_directions_run_black"
        android:title="@string/action_4"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_5"
        android:icon="@drawable/ic_directions_run_black"
        android:title="@string/action_5"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_6"
        android:icon="@drawable/ic_directions_run_black"
        android:title="@string/action_6"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
</menu>